[package]
name = "so2_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
iced = { version = "0.13.1", features = ["tokio"] }
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
